@@ -1,28 +1,33 @@
+S3method(ALLEXTID,DO)
+S3method(EXTID2TERMID,DO)
+S3method(TERM2NAME,DO)
+S3method(TERMID2EXTID,DO)
 export(ALLEXTID)
-exportClasses(DOParams)
-exportClasses(enrichResult)
-export(cnetplot)
-export(doSim)
-export(enrichDO)
-export(enrich.internal)
 export(EXTID2NAME)
 export(EXTID2TERMID)
+export(TERM2NAME)
+export(TERMID2EXTID)
+export(cnetplot)
+export(doSim)
+export(enrich.internal)
+export(enrichDO)
 export(geneSim)
-export(infoContentMethod)
-exportMethods(plot)
+export(simplot)
+exportClasses(DOParams)
+exportClasses(enrichResult)
 exportMethods("setReadable<-")
+exportMethods(plot)
 exportMethods(show)
 exportMethods(sim)
 exportMethods(summary)
-export(simplot)
-export(TERM2NAME)
-export(TERMID2EXTID)
-export(wangMethod)
 importClassesFrom(methods,data.frame)
 importFrom(DO.db,DOANCESTOR)
 importFrom(DO.db,DOOFFSPRING)
 importFrom(DO.db,DOPARENTS)
 importFrom(DO.db,DOTERM)
+importFrom(GOSemSim,combineScores)
+importFrom(GOSemSim,infoContentMethod)
+importFrom(GOSemSim,wangMethod)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
@@ -39,15 +44,15 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_text)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
-importFrom(igraph,degree)
 importFrom(igraph,"E<-")
+importFrom(igraph,"V<-")
 importFrom(igraph,E)
+importFrom(igraph,V)
+importFrom(igraph,degree)
 importFrom(igraph,graph.data.frame)
 importFrom(igraph,layout.fruchterman.reingold)
 importFrom(igraph,plot.igraph)
 importFrom(igraph,tkplot)
-importFrom(igraph,"V<-")
-importFrom(igraph,V)
 importFrom(methods,new)
 importFrom(methods,show)
 importFrom(plyr,.)
@@ -64,7 +69,3 @@ importMethodsFrom(AnnotationDbi,mget)
 importMethodsFrom(AnnotationDbi,select)
 importMethodsFrom(AnnotationDbi,toTable)
 importMethodsFrom(DO.db,Term)
-S3method(ALLEXTID,DO)
-S3method(EXTID2TERMID,DO)
-S3method(TERM2NAME,DO)
-S3method(TERMID2EXTID,DO)
